--- a/roles/luanti/molecule/default/side_effect.yml
+++ b/roles/luanti/molecule/default/side_effect.yml
@@ -7,4 +7,4 @@
       ansible.builtin.include_role:
         name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
       vars:
-        minetest_server_enabled: false
+        luanti_enabled: false
