--- a/roles/luanti/molecule/default/verify.yml
+++ b/roles/luanti/molecule/default/verify.yml
@@ -7,12 +7,12 @@
       ansible.builtin.include_vars:
         file: ../../defaults/main.yml
 
-    - name: Get minetest_server container state
+    - name: Get luanti container state
       community.docker.docker_container:
-        name: "{{ minetest_server_container_name }}"
+        name: "{{ luanti_container_name }}"
       register: result
 
-    - name: Check if minetest_server containers are running
+    - name: Check if luanti containers are running
       ansible.builtin.assert:
         that:
           - result.container['State']['Status'] == "running"
