--- a/roles/apcupsd/molecule/default/verify_stopped.yml
+++ b/roles/apcupsd/molecule/default/verify_stopped.yml
@@ -3,16 +3,16 @@
   hosts: all
   gather_facts: false
   tasks:
-    - include_vars:
+    - ansible.builtin.include_vars:
         file: ../../defaults/main.yml
 
     - name: Try and stop and remove Apcupsd
-      docker_container:
+      community.docker.docker_container:
         name: "{{ apcupsd_container_name }}"
         state: absent
       register: result
 
     - name: Check Apcupsd is stopped
-      assert:
+      ansible.builtin.assert:
         that:
           - not result.changed
