Disabled docker.py (wasn't working!)

--- a/roles/ansible-nas-docker/tasks/main.yml
+++ b/roles/ansible-nas-docker/tasks/main.yml
@@ -6,21 +6,21 @@
   register: result
   until: result is succeeded
 
-- name: Remove docker-py python module
-  ansible.builtin.pip:
-    name: docker-py
-    state: absent
-    break_system_packages: true
-  register: result
-  until: result is succeeded
+#- name: Remove docker-py python module
+#  ansible.builtin.pip:
+#    name: docker-py
+#    state: absent
+#    break_system_packages: true
+#  register: result
+#  until: result is succeeded
 
-- name: Install docker python module
-  ansible.builtin.pip:
-    name: docker
-    state: present
-    break_system_packages: true
-  register: result
-  until: result is succeeded
+#- name: Install docker python module
+#  ansible.builtin.pip:
+#    name: docker
+#    state: present
+#   break_system_packages: true
+#  register: result
+#  until: result is succeeded
 
 - name: Create Docker home directory
   ansible.builtin.file:
