--- a/roles/radarr/defaults/main.yml
+++ b/roles/radarr/defaults/main.yml
@@ -6,6 +6,7 @@ radarr_available_externally: false
 radarr_movies_directory: "{{ movies_root }}"
 radarr_download_directory: "{{ downloads_root }}"
 radarr_data_directory: "{{ docker_home }}/radarr"
+radarr_network_name: radarr
 
 # uid / gid
 radarr_user_id: "0"
