--- a/roles/jackett/tasks/main.yml
+++ b/roles/jackett/tasks/main.yml
@@ -1,6 +1,10 @@
 ---
 - name: Start Jackett
   block:
+    - name: Create Radarr network
+      community.docker.docker_network:
+        name: "{{ radarr_network_name }}"
+
     - name: Create Jackett Directories
       ansible.builtin.file:
         path: "{{ item }}"
@@ -22,6 +26,7 @@
           TZ: "{{ ansible_nas_timezone }}"
         restart_policy: unless-stopped
         memory: "{{ jackett_memory }}"
+        network_mode: "{{ radarr_network_name }}"
         labels:
           traefik.enable: "{{ jackett_available_externally | string }}"
           traefik.http.routers.jackett.rule: "Host(`{{ jackett_hostname }}.{{ ansible_nas_domain }}`)"
