--- a/roles/sonarr/tasks/main.yml
+++ b/roles/sonarr/tasks/main.yml
@@ -1,6 +1,10 @@
 ---
 - name: Start Sonarr
   block:
+    - name: Create Radarr network
+      community.docker.docker_network:
+        name: "{{ radarr_network_name }}"
+
     - name: Create Sonarr Directories
       ansible.builtin.file:
         path: "{{ item }}"
@@ -25,6 +29,7 @@
           PGID: "{{ sonarr_group_id }}"
         restart_policy: unless-stopped
         memory: "{{ sonarr_memory }}"
+        network_mode: "{{ radarr_network_name }}"
         labels:
           traefik.enable: "{{ sonarr_available_externally | string }}"
           traefik.http.routers.sonarr.rule: "Host(`{{ sonarr_hostname }}.{{ ansible_nas_domain }}`)"
