Fix and configurations for homepage

--- a/roles/romm/tasks/main.yml
+++ b/roles/romm/tasks/main.yml
@@ -75,8 +75,9 @@
           homepage.group: Media
           homepage.name: Romm
           homepage.icon: romm
-          homepage.href: http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ romm_port }}
-          homepage.description: Game library manager
+          homepage.href: "http://{{ ansible_nas_hostname }}:{{ romm_port }}"
+          homepage.widget.type: romm
+          homepage.widget.url: "http://{{ ansible_nas_hostname }}:{{ romm_port }}"
   when: romm_enabled is true
 
 - name: Stop Romm
