--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -62,7 +62,7 @@
           traefik.http.services.homeassistant.loadbalancer.server.port: "8123"
           homepage.group: Home
           homepage.name: HomeAssistant
-          homepage.icon: homeassistant.png
+          homepage.icon: home-assistant
           homepage.href: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:8123"
           homepage.description: Home Automation
         memory: "{{ homeassistant_memory }}"
