--- a/roles/pretix/tasks/main.yml
+++ b/roles/pretix/tasks/main.yml
@@ -71,6 +71,8 @@
           - "{{ pretix_port }}:80"
         restart_policy: unless-stopped
         memory: "{{ pretix_memory }}"
+        sysctls:
+          net.core.somaxconn: "4096"
         labels:
           traefik.enable: "{{ pretix_available_externally | string }}"
           traefik.http.routers.pretix.rule: "Host(`{{ pretix_hostname }}.{{ ansible_nas_domain }}`)"
@@ -78,6 +80,19 @@
           traefik.http.routers.pretix.tls.domains[0].main: "{{ ansible_nas_domain }}"
           traefik.http.routers.pretix.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
           traefik.http.services.pretix.loadbalancer.server.port: "80"
+
+    - name: Setup CRON jobs
+      ansible.builtin.cron:
+        name: 'Pretix cron job'
+        user: "{{ ansible_nas_user }}"
+        job: '/usr/bin/docker exec {{ pretix_container_name }} pretix cron'
+        minute: '15,45'
+        hour: '*'
+        weekday: '*'
+        month: '*'
+        state: present
+      become: true
+
   when: pretix_enabled is true
 
 - name: Stop Pretix
@@ -91,4 +106,17 @@
       community.docker.docker_container:
         name: "{{ pretix_db_container_name }}"
         state: absent
+
+    - name: Stop Pretix Redis
+      community.docker.docker_container:
+        name: "{{ pretix_redis_container_name }}"
+        state: absent
+
+    - name: Remove pretix cron job
+      ansible.builtin.cron:
+        name: "Pretix cron job"
+        user: "{{ ansible_nas_user }}"
+        state: absent
+      become: true
+
   when: pretix_enabled is false
