Update immich role for latest version

--- a/roles/immich/defaults/main.yml
+++ b/roles/immich/defaults/main.yml
@@ -29,8 +29,8 @@ immich_microservices_container_name: "immich_microservices"
 immich_machinelearning_container_name: "immich_machine_learning"
 immich_power_tools_container_name: "immich_power_tools"
 
-immich_postgres_image: "tensorchord/pgvecto-rs"
-immich_postgres_tag: "pg14-v0.2.0"
+immich_postgres_image: "ghcr.io/immich-app/postgres"
+immich_postgres_tag: "14-vectorchord0.3.0-pgvectors0.2.0"
 immich_redis_image: "redis"
 immich_redis_tag: "6.2-alpine"
 immich_server_image: "ghcr.io/immich-app/immich-server"
