--- a/roles/immich/tasks/main.yml
+++ b/roles/immich/tasks/main.yml
@@ -29,28 +29,6 @@
           PG_DATA: /var/lib/postgresql/data
         restart_policy: always
         memory: "{{ immich_postgres_memory }}"
-        healthcheck:
-          test: ["CMD-SHELL", "pg_isready -d {{ immich_db_name }} -U {{ immich_db_username }}"]
-          start_period: 20s
-          interval: 30s
-          retries: 5
-          timeout: 5s
-        command:
-          [
-            'postgres',
-            '-c',
-            'shared_preload_libraries=vectors.so',
-            '-c',
-            'search_path="$$user", public, vectors',
-            '-c',
-            'logging_collector=on',
-            '-c',
-            'max_wal_size=2GB',
-            '-c',
-            'shared_buffers=512MB',
-            '-c',
-            'wal_compression=on',
-          ]
 
     - name: Immich Redis Docker Container
       community.docker.docker_container:
@@ -147,6 +125,7 @@
           traefik.enable: "false"
         restart_policy: unless-stopped
         memory: "{{ immich_machinelearning_memory }}"
+        memory_swap: "{{ immich_machinelearning_memory }}"
 
     - name: Install Immich Power Tools
       block:
