--- a/roles/transmission-with-openvpn/tasks/main.yml
+++ b/roles/transmission-with-openvpn/tasks/main.yml
@@ -54,7 +54,6 @@
           - NET_ADMIN
         restart_policy: unless-stopped
         memory: "{{ transmission_openvpn_memory }}"
-        network_mode: "{{ radarr_network_name }}"
         memory_swap: "{{ transmission_openvpn_memory }}"
         labels:
           traefik.enable: "{{ transmission_with_openvpn_available_externally | string }}"
@@ -63,6 +62,11 @@
           traefik.http.routers.transmission_openvpn.tls.domains[0].main: "{{ ansible_nas_domain }}"
           traefik.http.routers.transmission_openvpn.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
           traefik.http.services.transmission_openvpn.loadbalancer.server.port: "9091"
+          homepage.group: Media
+          homepage.name: Transmission
+          homepage.icon: transmission
+          homepage.href: "http://{{ ansible_nas_hostname }}:{{ transmission_openvpn_webui_port }}/transmission/web/"
+          homepage.description: Torrent client
 
   when: transmission_with_openvpn_enabled is true
 
