Homepage support for various apps

--- a/roles/code-server/tasks/main.yml
+++ b/roles/code-server/tasks/main.yml
@@ -25,6 +25,11 @@
           traefik.http.routers.code_server.tls.domains[0].main: "{{ ansible_nas_domain }}"
           traefik.http.routers.code_server.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
           traefik.http.services.code_server.loadbalancer.server.port: "8443"
+          homepage.group: Applications
+          homepage.name: Code Server
+          homepage.icon: code-server
+          homepage.href: "http://{{ ansible_nas_hostname }}:{{ code_server_port }}"
+          homepage.description : "VS Code in the browser"
   when: code_server_enabled is true
 
 - name: Stop Code Server
