--- a/roles/librespeed/tasks/main.yml
+++ b/roles/librespeed/tasks/main.yml
@@ -38,6 +38,11 @@
           traefik.http.routers.librespeed.tls.domains[0].main: "{{ ansible_nas_domain }}"
           traefik.http.routers.librespeed.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
           traefik.http.services.librespeed.loadbalancer.server.port: "80"
+          homepage.group: System
+          homepage.name: LibreSpeed
+          homepage.icon: librespeed
+          homepage.href: "http://{{ ansible_nas_hostname }}:{{ librespeed_port }}"
+          homepage.description : "Free and Open Source Speed Test"
   when: librespeed_enabled is true
 
 - name: Stop Librespeed
