--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -37,7 +37,8 @@
           traefik.http.middlewares.portainer-ipallowlist.ipallowlist.sourcerange: "{{ portainer_ip_allowlist }}"
           homepage.group: System
           homepage.name: Portainer
-          homepage.icon: portainer.png
+          homepage.icon: portainer
+          homepage.href: "https://{{ ansible_nas_hostname }}:{{ portainer_port }}"
           homepage.description: Container management
           homepage.widget.type: portainer
           homepage.widget.url: "https://{{ ansible_nas_hostname }}:{{ portainer_port }}"
