--- a/roles/tautulli/tasks/main.yml
+++ b/roles/tautulli/tasks/main.yml
@@ -34,14 +34,9 @@
           traefik.http.routers.tautulli.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
           traefik.http.services.tautulli.loadbalancer.server.port: "8181"
           homepage.group: Media
-          homepage.name: Plex
-          homepage.icon: plex.png
-          homepage.href: "http://{{ ansible_nas_hostname }}:32400"
-          homepage.widget.type: tautulli
-          homepage.widget.url: "http://{{ ansible_nas_hostname }}:{{ tautulli_port }}"
-          homepage.widget.key: "{{ tautulli_api_key }}"
-          homepage.widget.enableUser: "true"
-          homepage.widget.showEpisodeNumber: "true"
+          homepage.name: Tautulli
+          homepage.icon: tautulli
+          homepage.href: "http://{{ ansible_nas_hostname }}:{{ tautulli_port }}"
   when: tautulli_enabled is true
 
 - name: Stop Tautulli
