--- a/roles/bambustudio/defaults/main.yml
+++ b/roles/bambustudio/defaults/main.yml
@@ -34,7 +34,7 @@ bambustudio_fm_home: "/config"
 bambustudio_start_docker: "false"
 bambustudio_drinode: "/dev/dri/renderD128"
 bambustudio_disable_ipv6: "true"
-bambustudio_lc_all: "en_EN.UTF-8"
+bambustudio_lc_all: "en_US.UTF-8"
 bambustudio_no_decor: "false"
 bambustudio_no_full: "true"
 bambustudio_security_opts: "seccomp=unconfined"
