--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -108,7 +108,7 @@
           homepage.group: Home
           homepage.name: Zigbee2MQTT
           homepage.icon: zigbee2mqtt.png
-          homepage.href: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ zigbee2mqtt_port }}"
+          homepage.href: "http://{{ ansible_nas_hostname }}:{{ zigbee2mqtt_port }}"
           homepage.description: Zigbee2MQTT broker
         memory: "{{ zigbee2mqtt_memory }}"
 
