--- a/roles/immich/defaults/main.yml
+++ b/roles/immich/defaults/main.yml
@@ -30,9 +30,9 @@ immich_machinelearning_container_name: "immich_machine_learning"
 immich_power_tools_container_name: "immich_power_tools"
 
 immich_postgres_image: "ghcr.io/immich-app/postgres"
-immich_postgres_tag: "14-vectorchord0.3.0-pgvectors0.2.0"
-immich_redis_image: "redis"
-immich_redis_tag: "6.2-alpine"
+immich_postgres_tag: "14-vectorchord0.4.3-pgvectors0.2.0"
+immich_redis_image: "docker.io/valkey/valkey"
+immich_redis_tag: "8-bookworm@sha256:fec42f399876eb6faf9e008570597741c87ff7662a54185593e74b09ce83d177"
 immich_server_image: "ghcr.io/immich-app/immich-server"
 immich_server_tag: "{{ immich_version }}"
 immich_microservices_image: "ghcr.io/immich-app/immich-server"
