--- a/roles/immich/tasks/main.yml
+++ b/roles/immich/tasks/main.yml
@@ -43,7 +43,7 @@
         restart_policy: always
         memory: "{{ immich_redis_memory }}"
         healthcheck:
-          test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
+          test: ["CMD-SHELL", "redis-cli ping || exit 1"]
           start_period: 20s
           interval: 30s
           retries: 5
