Beszel and dawarich available via domain

--- a/roles/beszel/tasks/main.yml
+++ b/roles/beszel/tasks/main.yml
@@ -17,15 +17,15 @@
         memory: "{{ beszel_memory }}"
         labels:
           traefik.enable: "{{ beszel_available_externally | string }}"
-          traefik.http.routers.netdata.rule: "Host(`{{ beszel_hostname }}.{{ ansible_nas_domain }}`)"
-          traefik.http.routers.netdata.tls.certresolver: "letsencrypt"
-          traefik.http.routers.netdata.tls.domains[0].main: "{{ ansible_nas_domain }}"
-          traefik.http.routers.netdata.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
-          traefik.http.services.netdata.loadbalancer.server.port: "8090"
+          traefik.http.routers.beszel.rule: "Host(`{{ beszel_hostname }}.{{ ansible_nas_domain }}`)"
+          traefik.http.routers.beszel.tls.certresolver: "letsencrypt"
+          traefik.http.routers.beszel.tls.domains[0].main: "{{ ansible_nas_domain }}"
+          traefik.http.routers.beszel.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
+          traefik.http.services.beszel.loadbalancer.server.port: "8090"
           homepage.group: "System"
           homepage.name: "Beszel"
           homepage.icon: "beszel"
-          homepage.href: "http://{{ ansible_nas_hostname }}:{{ beszel_port }}"
+          homepage.href: "https://{{ beszel_hostname }}.{{ ansible_nas_domain }}"
           homepage.widget.type: beszel
           homepage.widget.url: "http://{{ ansible_nas_hostname }}:{{ beszel_port }}"
           homepage.widget.username: "{{beszel_username}}"
