--- a/roles/dawarich/tasks/main.yml
+++ b/roles/dawarich/tasks/main.yml
@@ -79,7 +79,7 @@
           DATABASE_USERNAME: "{{ dawarich_pg_user }}"
           DATABASE_PASSWORD: "{{ dawarich_pg_password }}"
           DATABASE_NAME: "dawarich_development"
-          APPLICATION_HOSTS: "{{ ansible_nas_hostname }}:{{ dawarich_port }}"
+          APPLICATION_HOSTS: "{{ dawarich_hostname }}.{{ ansible_nas_domain }},{{ ansible_nas_hostname }}:{{ dawarich_port }}"
           MIN_MINUTES_SPENT_IN_CITY: "60"
           TIME_ZONE: "Europe/Warsaw"
           APPLICATION_PROTOCOL: "http"
@@ -87,10 +87,16 @@
           PROMETHEUS_EXPORTER_ENABLED: "false"
           SELF_HOSTED: "true"
         labels:
+          traefik.enable: "{{ dawarich_available_externally | string }}"
+          traefik.http.routers.dawarich.rule: "Host(`{{ dawarich_hostname }}.{{ ansible_nas_domain }}`)"
+          traefik.http.routers.dawarich.tls.certresolver: "letsencrypt"
+          traefik.http.routers.dawarich.tls.domains[0].main: "{{ ansible_nas_domain }}"
+          traefik.http.routers.dawarich.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
+          traefik.http.services.dawarich.loadbalancer.server.port: "3000"
           homepage.group: Applications
           homepage.name: Dawarich
           homepage.icon: dawarich
-          homepage.href: "http://{{ ansible_nas_hostname }}:{{ dawarich_port }}"
+          homepage.href: "https://{{ dawarich_hostname }}.{{ ansible_nas_domain }}"
           homepage.description: Location tracker
         restart_policy: unless-stopped
         memory: 4g
