Immich available via domain

--- a/roles/immich/tasks/main.yml
+++ b/roles/immich/tasks/main.yml
@@ -87,7 +87,7 @@
           homepage.group: Media
           homepage.name: Immich
           homepage.icon: immich.png
-          homepage.href: "http://{{ ansible_nas_hostname }}:{{ immich_port }}"
+          homepage.href: "https://{{ immich_hostname }}.{{ ansible_nas_domain }}"
           homepage.widget.type: immich
           homepage.widget.url: "http://{{ ansible_nas_hostname }}:{{ immich_port }}"
           homepage.widget.key: "{{ immich_api_key }}"
