--- a/roles/stirlingpdf/tasks/main.yml
+++ b/roles/stirlingpdf/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Start Stirling-PDF
   block:
-    - name: Create stStirling-PDFirlingpdf Directories
+    - name: Create Stirling-PDF Directories
       ansible.builtin.file:
         path: "{{ item }}"
         state: directory
@@ -41,7 +41,7 @@
           homepage.group: Applications
           homepage.name: StirlingPdf
           homepage.icon: stirling-pdf
-          homepage.href: "http://{{ ansible_nas_hostname }}:{{ stirlingpdf_port }}"
+          homepage.href: "https://{{ stirlingpdf_hostname }}.{{ ansible_nas_domain }}"
           homepage.description : "Free Adobe Acrobat Alternative"
   when: stirlingpdf_enabled is true
 
