--- a/nas.yml
+++ b/nas.yml
@@ -85,6 +85,10 @@
       tags:
         - appsmith
 
+    - role: arcane
+      tags:
+        - arcane
+
     - role: aria2
       tags:
         - aria2
