--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,5 @@
 ---
 name: CI
-
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
@@ -11,7 +10,6 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
 jobs:
   lint:
     name: Lint
@@ -19,21 +17,16 @@ jobs:
     steps:
       - name: Check out the codebase
         uses: actions/checkout@v4
-
       - name: Set up Python 3
         uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
-
+          python-version: 3.x
       - name: Install test dependencies
-        run: pip3 install ansible yamllint==1.35.1 ansible-lint==24.2.0
-
+        run: pip3 install ansible yamllint==1.37.1 ansible-lint==25.8.2
       - name: Ansible-lint
         run: ansible-lint nas.yml
-
       - name: Lint yaml files
         run: yamllint .
-
       - name: Lint docs
         uses: articulate/actions-markdownlint@main
         with:
